# ammonia-php-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  composer.json
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benchmark/: benchmark.php
examples/: basic.php
src/: builder.rs  lib.rs
stubs/: ammonia.stubs.php
