[package]
name = "ammonia-php-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "ammonia_php_rs"
crate-type = ["cdylib"]

[lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
disallowed_types = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
ammonia = "4.1.2"
ext-php-rs = "*"
